--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
 <html>
-   <head
-     
+	<head>
+	
+	</head>
+	<body>
+		<form action="/recebe.html" method="post">
+		<br> Nome completo: <input type="text" maxlenght="50" id="login">
+		<br>
+		<br> Senha: <input type="password" id="senha" name="senha">	
+		<br>
+		<br> Idade: <input type="number"  min="01" max="120" id="idade" name="idade">
+		<br>
+		<br> E-mail: <input type="email" id="email" name="email">
+		<br>
+		<br> Data de nascimento: <input type="date" min="2000.01.01" max="2024.12.31" id="date" name="date">
+		<br>
+		<br> Obs:<br> <textarea rows="4" cols="40"> </textarea>
+		<br>
+		<br><select><option value="programação"> Programação</option>
+			<option value="design"> Design </option>
+			<option value="redes"> Redes </option>
+			<option value="suporte"> Suporte </option></select>
+		<br>
+		<br>  <input type="submit" value="Enviar">
+
+	</body>
 </html>
