--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 	
 	</head>
 	<body>
+		<!--Abertura do formulário-->
 		<form action="/recebe.html" method="post">
+		<br><!--Campo de login-->	
+		<br> <label for="login"> Nome completo:</label>	
 		<br> Nome completo: <input type="text" maxlenght="50" id="login">
 		<br>
+		<br> <label for="senha"> Senha:</label>
+		<!--Campo de senha-->	
 		<br> Senha: <input type="password" id="senha" name="senha">	
 		<br>
+		<br> <label for="idade"> Idade:</label>	
 		<br> Idade: <input type="number"  min="01" max="120" id="idade" name="idade">
 		<br>
+		<br> <label for="email"> E-mail:</label>	
 		<br> E-mail: <input type="email" id="email" name="email">
 		<br>
+		<br> <label for="date"> Data de nascimento:</label>	
 		<br> Data de nascimento: <input type="date" min="2000.01.01" max="2024.12.31" id="date" name="date">
 		<br>
+		<br>	
 		<br> Obs:<br> <textarea rows="4" cols="40"> </textarea>
 		<br>
 		<br><select><option value="programação"> Programação</option>
@@ -22,5 +31,6 @@
 			<option value="suporte"> Suporte </option></select>
 		<br>
 		<br>  <input type="submit" value="Enviar">
+		</form>	
 	</body>
 </html>
