--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 	</head>
 	<body>
-		<!--Abertura do formulário-->
+		<br><!--Abertura do formulário-->
 		<form action="/recebe.html" method="post">
 		<br><!--Campo de login-->	
 		<br> <label for="login"> Nome completo:</label>	
