--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<option value="suporte"> Suporte </option></select>
 		<br>
 		<br>  <input type="submit" value="Enviar">
+		<br><!--Fechamento de formulário-->	
 		</form>	
 	</body>
 </html>
