--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<br> Obs:<br> <textarea rows="4" cols="40"> </textarea>
 		<br>
 		<br><!--campo de seleção-->	
-		<br><select><option value="programação"> Programação</option>
+		<br><select id="campselect"><option value="programação"> Programação</option>
 			<option value="design"> Design </option>
 			<option value="redes"> Redes </option>
 			<option value="suporte"> Suporte </option></select>
