--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		<br><!--campo para escrever observações-->	
 		<br> Obs:<br> <textarea rows="4" cols="40"> </textarea>
 		<br>
-		<br><!--campo de seleção-->	
+		<br><!--campo de seleção-->
+		<br> Area de seleção:
 		<br><select id="campselect"><option value="programação"> Programação</option>
 			<option value="design"> Design </option>
 			<option value="redes"> Redes </option>
