--- a/Aula 09/index.html
+++ b/Aula 09/index.html
@@ -10,6 +10,9 @@
       <br> <label for="email"> E-mail: </label>
       <br> <input type="email" id="email" name="email">
       <br> 
+      <br> <label for="date"> Data de nascimento: </label>
+      <br> <input type="date" id="date" name="date">
+      <br>
       <br> <label for="senha"> Senha: </label>
       <br> <input type="password" id="senha" name="senha">
       <br>
