--- a/Aula 09/index.html
+++ b/Aula 09/index.html
@@ -16,7 +16,7 @@
       <br> <label for="senha"> Senha: </label>
       <br> <input type="password" id="senha" name="senha">
       <br>
-      <br> <select id="campselect">
+      <br> <select name="area">
       <br> <option value="programacao"> Programação </option>
       <br> <option value="design"> Design </option>
       <br> <option value="redes"> Redes </option>
