--- a/Aula 09/index.html
+++ b/Aula 09/index.html
@@ -16,6 +16,9 @@
       <br> <label for="senha"> Senha: </label>
       <br> <input type="password" id="senha" name="senha">
       <br>
+      <br> <label for="bio"> Mini biografia: </label>
+      <br> <textarea rows="4" cols="40"> </textarea>
+      <br>
       <br> <select name="area">
       <br> <option value="programacao"> Programação </option>
       <br> <option value="design"> Design </option>
