--- a/Aula 09/index.html
+++ b/Aula 09/index.html
@@ -19,7 +19,7 @@
       <br> <label for="bio"> Mini biografia: </label>
       <br> <textarea rows="4" cols="40"> </textarea>
       <br>
-      <br> <label for="area"> Área: </label>
+      <br> <label for="area"> Campo de seleção: </label>
       <br> <select name="area">
       <br> <option value="programacao"> Programação </option>
       <br> <option value="design"> Design </option>
